[package]
name = "rust-tui-manager"
version = "0.1.0"
edition = "2021"
authors = ["Pablo Sánchez <polblancoo@gmail.com>"]
description = "Una aplicación TUI para gestionar notas, snippets y búsquedas en múltiples fuentes para desarrolladores Rust"
readme = "README.md"
repository = "https://github.com/psanchezg/rust-tui-manager"
license = "MIT"
keywords = ["tui", "notes", "manager", "rust", "search"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.73"
open = "5.0"
arboard = "3.2"

[build-dependencies]
serde_json = "1.0"
